--- a/index.html
+++ b/index.html
@@ -231,8 +231,48 @@
 
 
               <div style="width: 100%; height: 50%; padding: 20px; background-color: rgb(240, 240, 240); border-radius: 10px; margin-top: 10px;">
-                <h3>PIX: 07304867965</h3>
-                <h3>PIX: 07304867965</h3>
+                <label>Realize transferência bancária pela conta bancária ou PIX.</label>
+
+                <table>
+                  <tr>
+                    <td style="text-align: right; font-family: grotesk !important; font-size: 15px; margin-top: 20px !important;">
+                        PIX:&nbsp;
+                    </td>
+                    <td style="font-family: grotesk !important; font-size: 18px; margin-top: 20px !important;">
+                        <b>41997404228</b>
+                    </td>
+                  </tr>
+
+                  <tr>
+                    <td style="padding-top: 20px !important; text-align: right; font-family: grotesk !important; font-size: 15px; ">
+                        CONTA:&nbsp;
+                    </td>
+                    <td style="padding-top: 20px !important; font-family: grotesk !important; font-size: 18px; ">
+                        <b>41997404228</b>
+                    </td>
+                  </tr>
+
+                  <tr>
+                    <td style="text-align: right; font-family: grotesk !important; font-size: 15px; ">
+                        AGÊNCIA:&nbsp;
+                    </td>
+                    <td style="font-family: grotesk !important; font-size: 18px; ">
+                        <b>41997404228</b>
+                    </td>
+                  </tr>
+
+                  <tr>
+                    <td style="text-align: right; font-family: grotesk !important; font-size: 15px; ">
+                        CPF:&nbsp;
+                    </td>
+                    <td style="font-family: grotesk !important; font-size: 18px; ">
+                        <b>41997404228</b>
+                    </td>
+                  </tr>
+                </table>
+
+
+
               </div>
 
 
