--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </center>
 
 
-              <div style="width: 100%; height: 50%; padding: 20px; background-color: rgb(240, 240, 240); border-radius: 10px;">
+              <div style="margin-top: 20px; width: 100%; height: 50%; padding: 20px; background-color: rgb(240, 240, 240); border-radius: 10px;">
                 <label style="font-size: 16px;">Realize transferência bancária pela conta bancária ou PIX.</label>
 
                 <table>
