mudanca de cards dialog

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
 
           <!-- basic modal -->
       <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
-        <div class="modal-dialog" style="height: 90% !important;">
-          <div class="modal-content" style="height: 100% !important;">
+        <div class="modal-dialog" style="height: 100% !important;">
+          <div class="modal-content" style="height: 90% !important;">
             <div class="modal-header" style="background-color: #e7406c; color: white;">
               <h4 class="modal-title" id="modal_titulo"></h4>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="font-family: none !important;">
@@ -231,8 +231,8 @@
             </center>
 
 
-              <div style="margin-top: 20px; width: 100%; height: 50%; padding: 20px; background-color: rgb(240, 240, 240); border-radius: 10px;">
-                <label style="font-size: 16px;">Realize transferência bancária pela conta bancária ou PIX.</label>
+              <div style="margin-top: 20px; width: 100%; height: 50%; padding: 20px; border-radius: 10px;">
+                <label style="font-size: 16px;">Realize a transferência por PIX ou por Conta Bancária.</label>
 
                 <table>
                   <tr>
@@ -246,28 +246,28 @@
 
                   <tr>
                     <td style="padding-top: 20px !important; text-align: right; font-family: grotesk !important; font-size: 15px; ">
-                        CÓDIGO BANCO:&nbsp;
+                        Código do Banco:&nbsp;
                     </td>
                     <td style="padding-top: 20px !important; font-family: grotesk !important; font-size: 18px; color: rgb(18, 115, 212);">
-                        <b>41997404228</b>
+                        <b>336</b>
                     </td>
                   </tr>
 
                   <tr>
                     <td style="text-align: right; font-family: grotesk !important; font-size: 15px; ">
-                        CONTA:&nbsp;
+                        Conta Bancária:&nbsp;
                     </td>
                     <td style="font-family: grotesk !important; font-size: 18px; color: rgb(18, 115, 212); ">
-                        <b>41997404228</b>
+                        <b>3358745-0</b>
                     </td>
                   </tr>
 
                   <tr>
                     <td style="text-align: right; font-family: grotesk !important; font-size: 15px; ">
-                        AGÊNCIA:&nbsp;
+                        Agência:&nbsp;
                     </td>
                     <td style="font-family: grotesk !important; font-size: 18px; color: rgb(18, 115, 212);">
-                        <b>41997404228</b>
+                        <b>0001</b>
                     </td>
                   </tr>
 
