mudanca de cards dialog

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                         CPF:&nbsp;
                     </td>
                     <td style="font-family: grotesk !important; font-size: 18px; color: rgb(18, 115, 212);">
-                        <b>104.406.099-92</b>
+                        <b>104<ponto style="font-family:arial">.</ponto>406<ponto style="font-family:arial">.</ponto>099-92</b>
                     </td>
                   </tr>
                 </table>
