--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 
             Conheça um pouquinho mais de nossa história no video abaixo.  <br><br>
 
-            Esta é a forma que encontramos para trazer vocês para mais perto de nós durante os preparativos do nosso casamento. Criamos este site com a intenção de que nossos amigos e familiares fiquem por dentro dos preparativos e conheçam um poquinho mais sobre nós, já que em tempos de pandemia, mal podemos nos encontrar. <br><br><br>
+            Esta é a forma que encontramos para trazer vocês para mais perto de nós durante os preparativos do nosso casamento. Criamos este site com a intenção de que nossos amigos e familiares fiquem por dentro dos preparativos e conheçam um poquinho mais sobre nós, já que em tempos de pandemia, mal podemos nos encontrar. 
+
+            <br><br><br>
         </label>
       </center>
       
@@ -157,8 +159,8 @@
       <div style="width: 100%; padding-top: 50px;">
        <center>
           <h5 class="center">Vem com a gente ou vai perder a festa?</h5><br>
-          <p style="text-align: center">
-            Para confirmar a sua presença no casamento só precisa escrever o seu nome completo e clicar em confirmar. Se você possui acompanhantes no casamento (marido, esposa, filhos, etc.), descreva os nomes no campo de descrição.
+
+          <p style="text-align: center">O Nosso casamento terá um delicioso café colonial logo após a cerimônia, sendo assim, precisamos que você confirme sua presença no casamento. Para confirmar, você precisa escrever seu nome completo no campo abaixo e clicar em "Confirmar Presença". Se você possui acompanhantes no casamento (marido, esposa, filhos, etc.), descreva os nomes no campo de descrição.
           </p>
 
           <br><br>
@@ -170,7 +172,7 @@
             <small class="form-text text-muted obrigatorio"><b>Campo obrigatório</b></small>
           </div>
           <div class="mb-3">
-            <label for="descricao" class="form-label">Descreva abaixo os nomes dos convidados que vão com você</label>
+            <label for="descricao" class="form-label">Descreva abaixo o nome dos convidados que vão com você</label>
             <textarea class="form-control" id="descricao" rows="6"></textarea>
           </div>
 
