--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Eduardo & Amanda</title>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="fontawesome-5.5/css/all.min.css" />
     <link rel="stylesheet" href="slick/slick.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
@@ -160,7 +161,7 @@
        <center>
           <h5 class="center">Vem com a gente ou vai perder a festa?</h5><br>
 
-          <p style="text-align: center">O Nosso casamento terá um delicioso café colonial logo após a cerimônia, sendo assim, precisamos que você confirme sua presença no casamento. Para confirmar, você precisa escrever seu nome completo no campo abaixo e clicar em "Confirmar Presença". Se você possui acompanhantes no casamento (marido, esposa, filhos, etc.), descreva os nomes no campo de descrição.
+          <p style="text-align: center">O nosso casamento será do jeito que sempre imaginamos, com um delicioso <b>café colonial</b> logo após a cerimônia, sendo assim, precisamos que você confirme sua presença no casamento. Para confirmar, você precisa escrever seu nome completo no campo abaixo e clicar em "Confirmar Presença". Se você possui acompanhantes no casamento (marido, esposa, filhos, etc.), descreva os nomes no campo de descrição.
           </p>
 
           <br><br>
