--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <label class="texto" style="margin:0px; padding: 0px; font-family: cream_cake !important; font-size: 40px; color: #3e8b5e;">Chácara do Rocio</label><br>
           <label style="margin:0px; padding: 0px; font-size: 22px;">Rua José Kuckla, 10</label> <br>
           <label style="margin:0px; padding: 0px; font-size: 16px;">Bairro Juruqui - Almirante Tamandaré</label><br>
-          <div style="max-width: 1000px; margin:10px; padding: 0px; font-size: 14px;">O local é uma <b>CHÁCARA</b>. Atente-se que por ser uma chácara na região metropolitana, pode ser que o sinal de seu celular não esteja funcionando tão bem e conseguentemente seu 4G. Caso queira voltar de Uber, o ideal seria agendar a voltar pelo aplicativo. </div><br>
+          <div style="max-width: 1000px; margin:10px; padding: 0px; font-size: 15px;">O local é uma <b>CHÁCARA</b>. Atente-se que por ser uma chácara na região metropolitana, pode ser que o sinal de celular não esteja tão bom e consequentemente seu 3G/4G não funcione. Caso queira voltar de Uber, o ideal seria agendar sua volta pelo aplicativo. Estamos verificando a necessidade de alugar uma Van para a volta de algumas pessoas, mas ainda não é certo. </div><br>
         
         </center>
       </div>
