--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ var produtos = [
       {
         "id": "11",
         "produto": "Aluguel de Buggy",
-        "descricao": "O preço que ta a gasolina está atualmente...",
+        "descricao": "O preço que a gasolina está atualmente...",
         "preco": "600",
         "imagem": "11.jpeg",
         "link": "https://pag.ae/7XJ7vY1-u"
